--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-@import "../node_modules/foundation-sites/assets/foundation";
+ @import './assets/scss/settings';
+
+ @import '~foundation-sites/scss/foundation';
+ @include foundation-everything;
+
+ @import "~ngx-foundation/assets/scss/main";
+
+
+ @import './assets/scss/global';
