--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,11 @@
 // @import "../../node_modules/foundation-sites/assets/foundation";
+.header-padding {
+  padding-top: 55px;
+  min-height: 100vh;
+}
+
+.sidebar-padding {
+  padding-left: 300px;
+  width: 100%;
+
+}
