--- a/src/app/modules/shared/header/header.component.html
+++ b/src/app/modules/shared/header/header.component.html
@@ -6,6 +6,7 @@
         <a routerLink='/'>Home</a>
       </li>
       <li><a routerLink='/orders'>Orders</a></li>
+      <li (click)="logout()"><a>Logout</a></li>
     </ul>
   </div>
   <!-- <button routerLink="/orders">Orders</button>
