--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -13,6 +13,10 @@
 .top-bar {
   background-color: $black;
   color: $white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 
   ul {
     background-color: $black;
