--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<div style="text-align:center">
-  <app-header></app-header>
-</div>
+<app-header></app-header>
+<div class="grid-x header-padding">
+  <app-sidebar></app-sidebar>
+  <div class="sidebar-padding">
+    <div style="min-height: 100%">
+      <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
+  </div>
 
-<router-outlet></router-outlet>
+</div>
